TELCODOCS#1968: Release notes for new features in 4.17

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -556,6 +556,23 @@ Starting in {product-title} 4.14, Extended Update Support (EUS) is extended to t
 [id="ocp-4-17-networking_{context}"]
 === Networking
 
+[id="ocp-4-17-dual-nic-logan-beach_{context}"]
+==== Dual-NIC Intel E810 Logan Beach as PTP grandmaster clock
+
+You can now configure `linuxptp` services as a grandmaster clock (T-GM) for dual Intel E810 Logan Beach network interface controllers (NICs). You can configure the `linuxptp` services as a T-GM for the following dual E810 NICs:
+
+* Intel E810-XXVDA4T Westport Channel NICs
+* Intel E810-CQDA2T Logan Beach NICs
+
+The host system clock is synchronized from the NIC that is connected to the Global Navigation Satellite Systems (GNSS) time source. The second NIC is synced to the 1PPS timing output provided by the NIC that is connected to GNSS. For more information, see xref:../networking/ptp/configuring-ptp.adoc#configuring-linuxptp-services-as-grandmaster-clock-dual-nic_configuring-ptp[Configuring linuxptp services as a grandmaster clock for dual E810 NICs].
+
+[id="ocp-4-17-sr-iov-network-metrics-exporter_{context}"]
+==== Enabling the SR-IOV network metrics exporter
+
+With this release, you can query the Single Root I/O Virtualization (SR-IOV) virtual function (VF) metrics by using the {product-title} web console to monitor the networking activity of the SR-IOV pods. When you query the SR-IOV VF metrics by using the web console, the SR-IOV network metrics exporter fetches and returns the VF network statistics along with the name and namespace of the pod that the VF is attached to. 
+
+For more information, see xref:../networking/hardware_networks/configuring-sriov-operator.adoc#sriov-operator-metrics_configuring-sriov-operator[Enabling the SR-IOV network metrics exporter]
+
 [id="ocp-4-17-networking-azure-support-nmstate-operator_{context}"]
 ==== Microsoft Azure for the Kubernetes NMState Operator
 
@@ -881,6 +898,21 @@ With this release, the image-based upgrade introduces the following enhancements
 * Adds comprehensive event history in the new `status.history` field of the `ImageBasedUpgrade` CR
 
 For more information about the `ImageBasedGroupUpgrade` API, see xref:../edge_computing/image_based_upgrade/ztp-image-based-upgrade.adoc#ztp-image-based-upgrade-concept_ztp-gitops[Managing the image-based upgrade at scale using the ImageBasedGroupUpgrade CR on the hub].
+
+[id="ocp-4-17-disk-encryption_{context}"]
+==== Disk encryption with TPM and PCR protection (Technology Preview)
+
+With this release, you can enable disk encryption with Trusted Platform Module (TPM) and Platform Configuration Registers (PCRs) protection. You can use the `diskEncryption` field in the `SiteConfig` custom resource (CR) to configure the disk encryption. Configuring the `SiteConfig` CR enables disk encryption at the time of cluster installation.
+
+For more information, see xref:../edge_computing/ztp-reference-cluster-configuration-for-vdu.adoc#ztp-sno-du-configuring-disk-encryption-with-pcr-protection_sno-configure-for-vdu[Enabling disk encryption with TPM and PCR protection]
+
+[id="ocp-4-17-config-ipsec-encryption_{context}"]
+==== IPsec encryption for multi-node clusters using {ztp} and SiteConfig resources
+
+You can now enable IPsec encryption in managed multi-node clusters that you deploy with {ztp} and {rh-rhacm-first}. You can encrypt traffic between the managed cluster and IPsec endpoints external to the managed cluster. All network traffic between nodes on the OVN-Kubernetes cluster network is encrypted with IPsec in Transport mode. 
+
+For more information, see xref:../edge_computing/ztp-deploying-far-edge-sites.adoc#ztp-configuring-ipsec-using-ztp-and-siteconfig-for-mno_ztp-deploying-far-edge-sites[Configuring IPsec encryption for multi-node clusters using {ztp} and SiteConfig resources]
+
 
 [id="ocp-4-17-hcp_{context}"]
 === Hosted control planes
@@ -2490,9 +2522,9 @@ In the following tables, features are marked with the following statuses:
 |Technology Preview
 |Technology Preview
 
-|Deploying IPsec encryption to managed clusters with {ztp} and {rh-rhacm}
+|Enabling disk encryption with TPM and PCR protection
 |Not Available
-|Technology Preview
+|Not Available
 |Technology Preview
 
 |====
