OSDOCS#11234: Release note

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -73,6 +73,22 @@ For more information, see xref:../installing/installing_gcp/installing-gcp-custo
 [id="ocp-4-17-installation-and-update-azure-spain_{context}"]
 ==== Installing a cluster on {azure-short} in the Central Spain region
 
+[id="ocp-4-17-installing-a-cluster-with-multiarch-support_{context}"]
+==== Installing a cluster with the support for configuring multi-architecture compute machines
+
+With this release, you can install an {aws-first} cluster and {gcp-first} cluster with the support for configuring multi-architecture compute machines. While installing the cluster, you can specify different CPU architectures for the control plane and compute machines in the following ways:
+
+* 64-bit x86 compute machines and 64-bit ARM control plane machines
+* 64-bit ARM compute machines and 64-bit x86 control plane machines
+
+An {product-title} cluster with multi-architecture compute machines supports compute machines with different architectures. For more information, see the following documentation:
+
+* xref:../installing/installing_aws/ipi/installing-aws-multiarch-support.adoc#installing-a-cluster-with-multiarch-support_ipi-aws-multiarch-support[Installing an AWS cluster on IPI with the support for configuring multi-architecture compute machines]
+* xref:../installing/installing_aws/upi/installing-aws-multiarch-support-upi.adoc#installing-a-cluster-with-multiarch-support_upi-aws-multiarch-support[Installing an AWS cluster on UPI with the support for configuring multi-architecture compute machines]
+* xref:../installing/installing_gcp/installing-gcp-multiarch-support.html#installing-a-cluster-with-multiarch-support_installing-gcp-multiarch-support[Installing a GCP cluster with the support for configuring multi-architecture compute machines]
+
+==== Deploy {azure-short} in the Spain region
+
 You can deploy {product-title} {product-version} in {azure-first} in the Spain, Central (`spaincentral`) region. For more information, see xref:../installing/installing_azure/installing-azure-account.adoc#installation-azure-regions_installing-azure-account[Supported Azure regions].
 
 [id="ocp-4-17-installation-and-update-azure-capi_{context}"]
