TELCODOCS-1872-RN: Expose MTU details added to the Release Notes for OCP 4.17
TELCODOCS-1872-RN: Peer review squad feedback applied

TELCODOCS-1872-RN: Peer review squad feedback #2 applied

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -729,7 +729,12 @@ MetalLB also includes a new field for the Border Gateway Protocol (BGP) peer cus
 You can use this field to specify how long BGP waits between connection attempts to a neighbor.
 For more information, see xref:../networking/metallb/metallb-configure-bgp-peers.html#nw-metallb-bgppeer-cr_configure-metallb-bgp-peers[About the BGP peer custom resource].
 
+[id="ocp-4-17-expose-mtu_{context}"]
+==== Exposing MTU for vfio-pci SR-IOV devices
 
+With this release, maximum transmission unit (MTU) on virtual function using the `vfio-pci` driver is available in the network-status pod annotation, and inside the container. 
+
+For more information, see xref:../networking/hardware_networks/add-pod.adoc#nw-sriov-expose-mtu_configuring-sr-iov[Exposing MTU for vfio-pci SR-IOV devices to pod].
 
 [id="ocp-4-17-registry"]
 === Registry
