--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -1604,14 +1604,15 @@ In the following tables, features are marked with the following statuses:
 
 |====
 
-[discrete]
-=== Specialized hardware and driver enablement Technology Preview features
-
-.Specialized hardware and driver enablement Technology Preview tracker
-[cols="4,1,1,1",options="header"]
-|====
-|Feature |4.15 |4.16 |4.17
-|====
+//[discrete]
+//=== Specialized hardware and driver enablement Technology Preview features
+//
+//.Specialized hardware and driver enablement Technology Preview tracker
+//[cols="4,1,1,1",options="header"]
+// |====
+// |Feature |4.15 |4.16 |4.17
+// |===
+// No Tech Preview or going-to-ga features from driver enablement - info from bthurber 24-Sep-24
 
 [discrete]
 [id="ocp-4-17-scalability-tech-preview_{context}"]
@@ -1658,6 +1659,11 @@ In the following tables, features are marked with the following statuses:
 |Technology Preview
 
 |Using {rh-rhacm} `PolicyGenerator` resources to manage {ztp} cluster policies
+|Not Available
+|Technology Preview
+|Technology Preview
+
+|Pinned Image Sets
 |Not Available
 |Technology Preview
 |Technology Preview
