Replacing deprecated 'oc sa' commands with 'oc create token' commands

--- a/modules/migration-upgrading-mtc-with-legacy-operator.adoc
+++ b/modules/migration-upgrading-mtc-with-legacy-operator.adoc
@@ -89,7 +89,7 @@ ifdef::upgrading-3-4[]
 +
 [source,terminal]
 ----
-$ oc sa get-token migration-controller -n openshift-migration
+$ oc create token migration-controller -n openshift-migration
 ----
 
 .. In the {mtc-short} web console, click *Clusters*.
