--- a/modules/migration-migrating-on-prem-to-cloud.adoc
+++ b/modules/migration-migrating-on-prem-to-cloud.adoc
@@ -105,7 +105,7 @@ $ oc get service -n <namespace>
 +
 [source,terminal]
 ----
-# oc sa get-token -n openshift-migration migration-controller
+# oc create token migration-controller -n openshift-migration
 ----
 
 . Open the {mtc-short} web console and add the source cluster, using the following values:
