Added Cisco firmware.
Signed-off-by: John Wilkins <jowilkin@redhat.com>

--- a/installing/installing_bare_metal_ipi/ipi-install-installation-workflow.adoc
+++ b/installing/installing_bare_metal_ipi/ipi-install-installation-workflow.adoc
@@ -47,6 +47,8 @@ include::modules/ipi-install-bmc-addressing-for-hpe-ilo.adoc[leveloffset=+2]
 
 include::modules/ipi-install-bmc-addressing-for-fujitsu-irmc.adoc[leveloffset=+2]
 
+include::modules/ipi-install-bmc-addressing-for-cisco-cimc.adoc[leveloffset=+2]
+
 include::modules/ipi-install-root-device-hints.adoc[leveloffset=+2]
 
 include::modules/ipi-install-setting-proxy-settings-within-install-config.adoc[leveloffset=+2]
@@ -89,7 +91,7 @@ include::modules/ipi-install-configuring-the-bios.adoc[leveloffset=+2]
 [id="additional-resources_bare_metal_config"]
 .Additional resources
 
-* xref:../../post_installation_configuration/bare-metal-configuration.adoc#post-install-bare-metal-configuration[Bare metal configuration]
+* xref:../../post_installation_configuration/bare-metal-configuration.adoc#post-install-bare-metal-configuration[Bare-metal configuration]
 
 include::modules/ipi-install-configuring-the-raid.adoc[leveloffset=+2]
 
@@ -99,7 +101,7 @@ include::modules/ipi-install-configuring-storage-on-nodes.adoc[leveloffset=+2]
 [id="additional-resources_raid_config"]
 .Additional resources
 
-* xref:../../post_installation_configuration/bare-metal-configuration.adoc#post-install-bare-metal-configuration[Bare metal configuration]
+* xref:../../post_installation_configuration/bare-metal-configuration.adoc#post-install-bare-metal-configuration[Bare-metal configuration]
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/9/html-single/managing_storage_devices/index#partition-naming-scheme_disk-partitions[Partition naming scheme]
 
