OCPBUGS-41766: Fix typo in oc create commands

--- a/modules/cnf-image-based-upgrade-prep-catalogsource.adoc
+++ b/modules/cnf-image-based-upgrade-prep-catalogsource.adoc
@@ -31,7 +31,7 @@ spec:
 +
 [source,terminal]
 ----
-$ oc create configmap example-catalogsources-cm --from-file=example-catalogsources.yaml=<path_to_catalogsource_cr> -n openshift-lifecycle-agent
+$ oc create configmap example-catalogsources-cm --from-file=<path_to_catalogsource_cr> -n openshift-lifecycle-agent
 ----
 
 . Patch the `ImageBasedUpgrade` CR by running the following command:
