--- a/modules/cnf-image-based-upgrade-prep-extramanifests.adoc
+++ b/modules/cnf-image-based-upgrade-prep-extramanifests.adoc
@@ -52,7 +52,7 @@ spec:
 +
 [source,terminal]
 ----
-$ oc create configmap example-extra-manifests-cm --from-file=example-extra-manifests.yaml=<path_to_extramanifest> -n openshift-lifecycle-agent
+$ oc create configmap example-extra-manifests-cm --from-file=<path_to_extramanifests> -n openshift-lifecycle-agent
 ----
 
 . Patch the `ImageBasedUpgrade` CR by running the following command:
