--- a/modules/cnf-image-based-upgrade-prep-oadp.adoc
+++ b/modules/cnf-image-based-upgrade-prep-oadp.adoc
@@ -58,7 +58,7 @@ The same version of the applications must function on both the current and the t
 +
 [source,terminal]
 ----
-$ oc create configmap oadp-cm-example --from-file=example-oadp-resources.yaml=<path_to_oadp_crs> -n openshift-adp
+$ oc create configmap oadp-cm-example --from-file=<path_to_oadp_crs> -n openshift-adp
 ----
 
 . Patch the `ImageBasedUpgrade` CR by running the following command:
