--- a/about/serverless-release-notes.adoc
+++ b/about/serverless-release-notes.adoc
@@ -83,7 +83,7 @@ include::modules/serverless-rn-1-25-0.adoc[leveloffset=+1]
 
 [role="_additional-resources"]
 .Additional resources for {ocp-product-title}
-* xref:../knative-serving/config-applications/serverless-config-tls.adoc#serverless-config-tls[Configuring TLS authentication]
+* xref:../knative-serving/serving-transport-encryption.adoc#serving-transport-encryption-setting-up[Serving transport encryption]
 
 include::modules/serverless-rn-1-24-0.adoc[leveloffset=+1]
 include::modules/serverless-rn-1-23-0.adoc[leveloffset=+1]
