--- a/modules/serverless-domain-mapping-custom-tls-cert.adoc
+++ b/modules/serverless-domain-mapping-custom-tls-cert.adoc
@@ -35,7 +35,7 @@ $ oc create secret tls <tls_secret_name> --cert=<path_to_certificate_file> --key
 $ oc label secret <tls_secret_name> networking.internal.knative.dev/certificate-uid="<id>"
 ----
 +
-If you are using a third-party secret provider such as cert-manager, you can configure your secret manager to label the Kubernetes TLS secret automatically. Cert-manager users can use the secret template offered to automatically generate secrets with the correct label. In this case, secret filtering is done based on the key only, but this value can carry useful information such as the certificate ID that the secret contains.
+If you are using a third-party secret provider such as `cert-manager`, you can configure your secret manager to label the Kubernetes TLS secret automatically. `cert-manager` users can use the secret template offered to automatically generate secrets with the correct label. In this case, secret filtering is done based on the key only, but this value can carry useful information such as the certificate ID that the secret contains.
 +
 [NOTE]
 ====
