OSDOCS-11208 CCO & CVO bugs 4.17 RNs

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -717,7 +717,7 @@ For a full list of flags to use with the `oc adm must-gather command`, see xref:
 [id="ocp-4-17-monitoring_{context}"]
 === Monitoring
 
-The in-cluster monitoring stack for this release includes the following new and modified features. 
+The in-cluster monitoring stack for this release includes the following new and modified features.
 //change the line if no features
 
 [id="ocp-4-17-monitoring-updates-to-monitoring-stack-components-and-dependencies"]
@@ -1217,9 +1217,17 @@ OpenShift SDN network plugin was deprecated in 4.15 and 4.16. With this release,
 [id="ocp-4-17-cloud-cred-operator-bug-fixes_{context}"]
 ==== Cloud Credential Operator
 
+* Previously, secrets in the cluster were fetched in a single call. When there was a large number of secrets, the API timed out. With this release, the Cloud Credential Operator fetches secrets in batches limited to 100 secrets. This change prevents timeouts when there is a large number of secrets in the cluster. (link:https://issues.redhat.com/browse/OCPBUGS-41233[*OCPBUGS-41233*])
+
+* Previously, the Cloud Credential Operator reported an error when the `awsSTSIAMRoleARN` role was not present on a cluster that used manual mode with AWS Security Token Service. With this release, the Cloud Credential Operator no longer reports this as an error. (link:https://issues.redhat.com/browse/OCPBUGS-33566[*OCPBUGS-33566*])
+
+* Previously, when checking whether passthrough permissions are sufficient, the Cloud Credential Operator sometimes received a response from the Google Cloud Platform API that a permission is invalid for a project. This response caused the Operator to become degraded and installation to fail. With this release, the Operator is updated to handle this error gracefully. (link:https://issues.redhat.com/browse/OCPBUGS-36140[*OCPBUGS-36140*])
+
 [discrete]
 [id="ocp-4-17-cluster-version-operator-bug-fixes_{context}"]
 ==== Cluster Version Operator
+
+* Previously, a rarely occurring race condition between Go routines caused the Cluster Version Operator (CVO) to panic after the CVO started. With this release, the Go routines synchronization is improved and the issue is resolved. (link:https://issues.redhat.com/browse/OCPBUGS-32678[*OCPBUGS-32678*])
 
 [discrete]
 [id="ocp-4-17-dev-console-bug-fixes_{context}"]
