TRACING-4560: improvements and clarifications regarding sidecar injection and instrumentation injection
Signed-off-by: Israel Blancas <iblancas@redhat.com>

--- a/modules/otel-config-instrumentation.adoc
+++ b/modules/otel-config-instrumentation.adoc
@@ -12,7 +12,14 @@ Auto-instrumentation in OpenTelemetry refers to the capability where the framewo
 
 [IMPORTANT]
 ====
-The {OTELName} Operator only supports the injection mechanism of the instrumentation libraries but does not support instrumentation libraries or upstream images. Customers can build their own instrumentation images or use community images.
+Injecting autoinstrumentation is different from injecting OpenTelemetry Collector as a sidecar. The sidecar approach runs a separate collector instance alongside your application, while autoinstrumentation automatically instruments your application to collect traces, logs, and metrics without requiring a sidecar.
+
+You can learn more about sidecar injection in link:otel-sending-traces-logs-and-metrics-to-otel-collector.html[OpenTelemetry Collector sidecar injection].
+====
+
+[IMPORTANT]
+====
+The {OTELName} Operator only supports the injection mechanism of the instrumentation libraries but does not support instrumentation libraries or upstream images. Customers can build their own instrumentation images or use community images (enabled by default in the operator).
 ====
 
 [id="otel-instrumentation-options_{context}"]
@@ -97,6 +104,12 @@ spec:
 |
 
 |===
+
+
+[NOTE]
+====
+Depending on the language, environment variables may not work for configuring telemetry. According to the OpenTelemetry specification, _"Implementations MAY choose to allow configuration via the environment variables in this specification, but are not required to."_ (see link: https://opentelemetry.io/docs/specs/otel/configuration/sdk-environment-variables/). For SDKs that do not support environment variable configuration, similar configuration must be done directly in the code.
+====
 
 [id="otel-using-instrumentation-cr-with-service-mesh_{context}"]
 == Using the instrumentation CR with Service Mesh
