--- a/modules/otel-send-traces-logs-and-metrics-to-otel-collector-with-sidecar.adoc
+++ b/modules/otel-send-traces-logs-and-metrics-to-otel-collector-with-sidecar.adoc
@@ -1,12 +1,21 @@
 // Module included in the following assemblies:
 //
-// * observability/otel/otel-sending-traces-and-metrics-to-otel-collector.adoc
+// * observability/otel/otel-sending-traces-logs-and-metrics-to-otel-collector.adoc
 
 :_mod-docs-content-type: PROCEDURE
-[id="sending-traces-and-metrics-to-otel-collector-without-sidecar_{context}"]
-= Sending traces and metrics to the OpenTelemetry Collector without sidecar injection
+[id="sending-traces-logs-and-metrics-to-otel-collector-with-sidecar_{context}"]
+= Sending traces, logs and metrics to the OpenTelemetry Collector with sidecar injection
 
-You can set up sending telemetry data to an OpenTelemetry Collector instance without sidecar injection, which involves manually setting several environment variables.
+You can set up sending telemetry data to an OpenTelemetry Collector instance with sidecar injection.
+
+The {OTELOperator} allows sidecar injection into deployment workloads and automatic configuration of your instrumentation to send telemetry data to the OpenTelemetry Collector.
+
+This configuration can be useful for different reasons:
+
+* Telemetry data (like 'exporting, batching, transforming') can be decoupled from application code to avoid additional complexity or processing overhead directly in the application using the following approach.
+* The sidecar can be regarded as a universal telemetry processor, thus hiding the differences in the SDK implementations and ensuring uniformity in the telemetry data sent to all the services.
+* The purpose of this can also be to generalize the telemetry processor to abstract the different SDK implementation methods and provide consistent telemetry information across services.
+* Provides more control over the telemetry data on a per-pod basis. You can customize what data is processed and how it is routed for each application or microservice independently.
 
 .Prerequisites
 
@@ -39,7 +48,7 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: otel-collector-deployment
+  name: otel-collector-sidecar
   namespace: observability
 ----
 
@@ -53,7 +62,7 @@ metadata:
   name: otel-collector
 rules:
 - apiGroups: ["", "config.openshift.io"]
-  resources: ["pods", "namespaces", "infrastructures", "infrastructures/status"]
+  resources: ["pods", "namespaces", "infrastructures"]
   verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -62,7 +71,7 @@ metadata:
   name: otel-collector
 subjects:
 - kind: ServiceAccount
-  name: otel-collector-deployment
+  name: otel-collector-sidecar
   namespace: observability
 roleRef:
   kind: ClusterRole
@@ -70,7 +79,7 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
 ----
 
-. Deploy the OpenTelemetry Collector instance with the `OpenTelemetryCollector` custom resource.
+. Deploy the OpenTelemetry Collector as a sidecar.
 +
 [source,yaml]
 ----
@@ -80,76 +89,44 @@ metadata:
   name: otel
   namespace: observability
 spec:
-  mode: deployment
-  serviceAccount: otel-collector-deployment
+  serviceAccount: otel-collector-sidecar
+  mode: sidecar
+  mode: sidecar
   config: |
     receivers:
       jaeger:
         protocols:
-          grpc: {}
-          thrift_binary: {}
-          thrift_compact: {}
-          thrift_http: {}
+          grpc:
+          thrift_binary:
+          thrift_compact:
+          thrift_http:
       opencensus:
       otlp:
         protocols:
-          grpc: {}
-          http: {}
-      zipkin: {}
+          grpc:
+          http:
+      zipkin:
     processors:
-      batch: {}
-      k8sattributes: {}
+      batch:
       memory_limiter:
         check_interval: 1s
         limit_percentage: 50
         spike_limit_percentage: 30
       resourcedetection:
         detectors: [openshift]
+        timeout: 2s
     exporters:
       otlp:
-        endpoint: "tempo-<example>-distributor:4317" # <1>
+        endpoint: "tempo-<example>-gateway:8090" # <1>
         tls:
           insecure: true
     service:
       pipelines:
         traces:
           receivers: [jaeger, opencensus, otlp, zipkin]
-          processors: [memory_limiter, k8sattributes, resourcedetection, batch]
+          processors: [memory_limiter, resourcedetection, batch]
           exporters: [otlp]
 ----
 <1> This points to the Gateway of the TempoStack instance deployed by using the `<example>` {TempoOperator}.
 
-. Set the environment variables in the container with your instrumented application.
-+
-[options="header"]
-[cols="a, a, a"]
-|===
-|Name |Description |Default value
-|`OTEL_SERVICE_NAME`
-|Sets the value of the `service.name` resource attribute.
-|`""`
-
-|`OTEL_EXPORTER_OTLP_ENDPOINT`
-|Base endpoint URL for any signal type with an optionally specified port number.
-|`\https://localhost:4317`
-
-|`OTEL_EXPORTER_OTLP_CERTIFICATE`
-|Path to the certificate file for the TLS credentials of the gRPC client.
-|`\https://localhost:4317`
-
-|`OTEL_TRACES_SAMPLER`
-|Sampler to be used for traces.
-|`parentbased_always_on`
-
-|`OTEL_EXPORTER_OTLP_PROTOCOL`
-|Transport protocol for the OTLP exporter.
-|`grpc`
-
-|`OTEL_EXPORTER_OTLP_TIMEOUT`
-|Maximum time interval for the OTLP exporter to wait for each batch export.
-|`10s`
-
-|`OTEL_EXPORTER_OTLP_INSECURE`
-|Disables client transport security for gRPC requests. An HTTPS schema overrides it.
-|`False`
-|===
+. Add the `sidecar.opentelemetry.io/inject: "true"` annotation to your `Deployment` object. This will inject all the needed environment variables to send data from your workloads to the OpenTelemetry Collector instance.
