Apply changes requested in code review
Signed-off-by: Israel Blancas <iblancas@redhat.com>

--- a/modules/otel-troubleshoot-instrumentation.adoc
+++ b/modules/otel-troubleshoot-instrumentation.adoc
@@ -11,26 +11,24 @@ You can troubleshoot instrumentation issues as follows.
 .Procedure
 
 . Check the instrumentation object is created:
-+
 [source,console]
 ----
 oc get instrumentation -n <your-project>
 ----
 
 . Confirm that the application pods you want to instrument are labeled correctly and the appropriate auto-instrumentation settings have been applied. For example, if you are instrumenting a Python application, you can check that the pods have the `instrumentation.opentelemetry.io/inject-python='true'` label:
-+
 
 [source,console]
 ----
 oc get pods -n <your-project> -o jsonpath='{range .items[?(@.metadata.annotations["instrumentation.opentelemetry.io/inject-python"]=="true")]}{.metadata.name}{"\n"}{end}'
 ----
 
-You should double-check the annotation applied to the instrumentation object is the correct one for the language you are instrumenting.
+You should double-check the annotation applied to the instrumentation object is the correct one for the language you are instrumenting. If there are multiple instrumentations in the same namespace, you should set its name in the annotation. Also, if the Instrumentation object is in a different namespace, you need to specify it in the annotation. You can find the accepted values in the link:otel-instrumentation.html["OpenTelemetry instrumentation configuration options"] section.
 
 When defining a Deployment, remember that annotations can be added in either {{spec.metadata.annotations}} or {{spec.template.metadata.annotations}}. Ensure that the auto-instrumentation annotation is added to {{spec.template.metadata.annotations}}.
 
 . Verify the endpoint that the instrumentation is transmitting data to:
-+
+
 [source,console]
 ----
 oc get instrumentation <instrumentation-name> -n <your-project> -o jsonpath='{.spec.endpoint}'
@@ -39,7 +37,7 @@ oc get instrumentation <instrumentation-name> -n <your-project> -o jsonpath='{.s
 By default, the endpoint is `http://localhost:4317`. This will work if you deployed the OpenTelemetry Collector as a sidecar container in your application pod. If you are using a different endpoint, you can update it by editing the instrumentation object and redeploying your application.
 
 . Inspect your application logs for error messages that might suggest that the instrumentation is malfunctioning:
-+
+
 [source,console]
 ----
 oc logs <application-pod> -n <your-project>
@@ -82,3 +80,5 @@ If those messages are missing, then it means that was an issue while injecting t
 ----
 oc logs -l app.kubernetes.io/name=opentelemetry-operator --container manager -n openshift-opentelemetry-operator --follow
 ----
+
+. Enable the Logging exporter described in the xref::debug-exporter-to-stdout_{context}[Debug exporter section].
