Fix exporter name
Signed-off-by: Israel Blancas <iblancas@redhat.com>

--- a/modules/otel-troubleshoot-instrumentation.adoc
+++ b/modules/otel-troubleshoot-instrumentation.adoc
@@ -81,4 +81,4 @@ If those messages are missing, then it means that was an issue while injecting t
 oc logs -l app.kubernetes.io/name=opentelemetry-operator --container manager -n openshift-opentelemetry-operator --follow
 ----
 
-. Enable the Logging exporter described in the xref::debug-exporter-to-stdout_{context}[Debug exporter section].
+. Enable the Debug exporter described in the xref::debug-exporter-to-stdout_{context}[Debug exporter section].
