--- a/observability/otel/otel-sending-traces-logs-and-metrics-to-otel-collector.adoc
+++ b/observability/otel/otel-sending-traces-logs-and-metrics-to-otel-collector.adoc
@@ -6,7 +6,7 @@ include::_attributes/common-attributes.adoc[]
 
 toc::[]
 
-You can configure the {OTELShortName} to send traces from your application to Tempo.
+You can configure the {OTELShortName} to send traces from your application to {TempoName}.
 
 * You have the option to inject an OpenTelemetry Collector instance as a sidecar into your application. This sidecar can send traces either to a Tempo instance or to another OpenTelemetry Collector deployed as a `Deployment`, for instance.
 * Alternatively, you can configure your application to send traces directly to an OpenTelemetry Collector deployed as a `Deployment`.
@@ -19,7 +19,7 @@ You can learn more about autoinstrumentation in link:otel-configuration-of-instr
 ====
 
 
-You can set up and use the {OTELShortName} to send traces to the OpenTelemetry Collector or the TempoStack instance.
+You can set up and use the {OTELShortName} to send traces to the OpenTelemetry Collector or the {TempoName} instance.
 
 Sending traces, logs and metrics to the OpenTelemetry Collector is possible with or without sidecar injection.
 
